<resources>
    <string name="app_name">Aplikasi Story App</string>
    <string name="registrasi">Registrasi</string>
    <string name="tvDescRegistration">Isi data kamu</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="hintNama">Nama</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="nama_user">Nama User</string>
    <string name="user_s_post">User\'s Post</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvDescDoesntHaveAccount">Anda belum memiliki akun?</string>
    <string name="openCamera">Camera</string>
    <string name="openGallery">Gallery</string>
    <string name="uploadStory">Upload Story</string>
    <string name="description">Description</string>
    <string name="story_photo">Story Photo</string>
    <string name="register_account">Register Account</string>
    <string name="logout">Logout</string>
    <string name="add_story_button">Add Story Button</string>
    <string name="tvLoginOnRegistration">Sudah punya akun?</string>
</resources>